--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,29 @@
 {
 	"name": "inluxc/openerp-php-connector",
+	"type": "library",
+	"description": "PHP Connector to Openerp",
 	"require": {
 		"phpxmlrpc/phpxmlrpc": "4.0.x",
-		"ext-xmlrpc": "*"
+		"ext-xmlrpc": "*",
+		"php": ">=5.3.0"
 	},
+	"authors": [
+		{
+			"name": "Mr. Tejas Tank",
+			"email": "tejas.tank.mca@gmail.com",
+			"homepage": "http://www.snippetbucket.com",
+			"role": "Developer"
+		},
+		{
+			"name": "Juho Jaakkola",
+			"role": "Contributor"
+		},
+		{
+			"name": "Fulvio Carvalhido",
+			"email": "inluxc@gmail.com",
+			"role": "Contributor"
+		}
+	],
 	"autoload": {
 		"psr-0": { "OpenERP": "" }
 	}
